# wst-informatyka

./: LICENSE  README.md
data-structures/: CMakeLists.txt
data-structures/src/main/array_list/: array_list.hpp
data-structures/src/main/common/: list.hpp
data-structures/src/main/linked_list/: linked_list.hpp
data-structures/src/test/array_list/: array_list.cpp
data-structures/src/test/linked_list/: linked_list.cpp
determinant-calculator/: CMakeLists.txt
determinant-calculator-python/: calculator.py
determinant-calculator/src/: calculator.cpp  main.cpp
logic-minimizer/: minimizer.py
numeric-methods/: .gitignore  build.gradle.kts  settings.gradle.kts
numeric-methods/src/main/kotlin/pl/wst/training/: AppLauncher.kt  Application.kt
numeric-methods/src/main/kotlin/pl/wst/training/math/: DoubleIntegralCalculator.kt  SingleIntegralCalculator.kt
numeric-methods/src/main/kotlin/pl/wst/training/ui/: DialogUtil.kt  DoubleIntegralWindow.kt  GuiFactory.kt  MainMenuWindow.kt  SingleIntegralWindow.kt
numeric-methods/src/test/kotlin/pl/wst/training/math/: SingleIntegralCalculatorBehaviorSpec.kt
quadratic-function/: CMakeLists.txt
quadratic-function/src/: main.cpp
